--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -310,6 +310,10 @@ min-height:333px;
 	width:100%;
 	height:56px
 }
+.front .cont-header-bg{
+        margin-bottom: 10px;
+  
+}
 .cont-header-bg h1 {
 	color:#63676b;
 	font-family:'Walkway Bold', sans-serif;
@@ -327,7 +331,6 @@ min-height:333px;
 	-webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-o-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
-	margin-left:12px;
 	margin-top:10px;
 	margin-bottom:10px;
 }
@@ -354,7 +357,7 @@ min-height:333px;
 	border-bottom:1px solid #dedede;
 }
 .find-palyers {
-	margin-left:2px;
+	margin-left:10px;
 	margin-top:20px;
 }
 .find-palyers ul {
@@ -364,7 +367,7 @@ min-height:333px;
 }
 .find-palyers ul li {
 	float:left;
-	margin-right:15px;
+	margin-right:12px;
 }
 .find-txt
 {
@@ -392,7 +395,7 @@ min-height:333px;
 .footer
 {
 	width:100%;
-	height:116px;
+	height:88px;
 	background:url(../images/footer-bg-new.png) repeat;
 	margin-top:20px;
 	border-top:1px solid #d5d5d5;
@@ -658,8 +661,7 @@ float: right !important;
     right: 35px;
     top: 96px;
 padding:0 !important;
-*top:124px;
-*right:12px;
+
 }
 .page-user-edit .password-strength, .page-user-edit .description
 {
@@ -968,6 +970,7 @@ ul.main-menu li a:hover{
   -moz-border-radius:15px;
   -webkit-border-radius:15px;*/
 }
+
 ul.main-menu li a, ul.main-menu li a:link, ul.main-menu li a:visited {
   padding:4px 12px!important;
   margin-top:6px;
@@ -1051,9 +1054,7 @@ ul.nice-menu, ul.nice-menu ul
 }
 .content ul.sf-menu li ul {
     background:#fbfbfb;/*url(../images/menu-arrow.png) no-repeat 20px -5px*/
-	border-radius:6px;
-	-moz-border-radius:6px;
-    -webkit-border-radius:6px;
+	
 	width:162px!important;
    margin:7px 0 0 0!important;
    padding:0px!important;
@@ -1064,8 +1065,8 @@ ul.nice-menu, ul.nice-menu ul
   margin:0px!important;
   padding:0px!important;
   padding:2px;
-  border-bottom:1px solid #e0e0e0;
   background-color:none!important;
+  border-bottom: 1px solid #ccc;
 }
 .content ul.sf-menu li ul li a:hover{
 border-radius:0px;
@@ -1326,9 +1327,10 @@ margin-top:20px;
 }
 
 .sf-shadow ul {
-    -moz-border-radius-bottomleft: 0px;
-    -moz-border-radius-topright: 0px;
-    }
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+    -webkit-border-radius: 5px!important;
+}
 
 /*************************Events*******************************************/
 .page-node- .region-content{
@@ -1364,16 +1366,16 @@ padding:10px;
 }
 
 /*------*****---------*/
-#event_drop {
+.page-photographer #event_drop {
    border-bottom:1px solid #999;
-   padding:0 0 0 0;
+   padding:0 0 16px 0;
    float:left;
    width:732px;
    height:63px;
 }
 .page-photographer .select_event_title {
    float:left;
-   padding:23px 0 0 10px;
+   padding:23px 0 16px 10px;
    width:238px!important;
    height:40px;
    border-bottom:1px solid #999;
@@ -1419,7 +1421,7 @@ padding:10px;
 	color: #898989;
     float: right;
     position: absolute;
-    top: 594px;
+    top: 540px;
 	right:16px;
 }
 .page-photographer .file_list {
@@ -1479,11 +1481,10 @@ div.messages {
 	position: relative;
 }
 .content ul.sf-menu li ul li ul {
+  
 	margin: -1px 0 0 -17px!important;
 	border-left:none;
-	border-radius:0 6px 6px 0;
-	-moz-border-radius:0 6px 6px 0;
-	-webkit-border-radius:0 6px 6px 0;
+
 }
 /*.region-header {
    margin-top:6px;
@@ -1629,6 +1630,7 @@ text-align:center;
 .page-runner .content #recent-event2-image
 {
   margin-top:-11px;
+  margin-left: 6px;
 }
 .page-runner .content #recent-event2-image .form-submit
 {
@@ -1877,7 +1879,7 @@ width: 209px;
 
 /*--------------------styles feedback form alignment---------------*/
 
-/*
+
 
 #block-feedback-form {
   display: none;
@@ -1902,8 +1904,6 @@ width: 209px;
   position: fixed !important;
   top:30% !important;
   left:30% !important;
-  
- 
   width:550px; 
  
 }
@@ -1913,7 +1913,7 @@ width: 209px;
 #block-feedback-form form{
  border:2px solid #A3A3A3 !important;  
  
-} */
+} 
 
 /*
 #block-feedback-form .feedback-link{
@@ -1926,6 +1926,11 @@ width: 209px;
  border:1px solid #ccc !important;  
 }
 */
+
  .page-user #wrapper,.page-search-result #wrapper {
   padding-top: 0.2px !important;
+}
+
+.page-login #inner-wrapper {
+  padding-top: 0.04px !important;
 }
