--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -981,11 +981,10 @@ padding:8px!important;
 }
 
 
-
-
 #branding img{
-padding-top:25px!important; 
+margin-top:25px!important; 
 margin-left:-8px;
+padding-top:0px!important;
 }
 ul.main-menu {
   float:left!important;
@@ -1786,7 +1785,7 @@ margin-top: 235px;
 .page-search-result .left-corner 
 {  
     float:left;
-      width: 546px;
+    width: 550px;
 }
 .page-search-result .left-corner .clearfix
 {
@@ -1824,7 +1823,7 @@ float: right;
     position: relative;
     right: 0;
     top: 0;
-    width: 15px;
+    width: 28px;
     z-index: 1;
 }
 .page-search-result .region-content .content table tr td,.page-search-result .region-content .content table tr th{
@@ -1877,9 +1876,11 @@ text-align:justify;
    font-size:14px;
    padding-left:38px;
    margin-top: 10px;
-border:0 none;
+   border:0 none;
    cursor:pointer;
-outline:none;
+   outline:none;
+   font-family:'Conv_HelveticaBold',Sans-Serif;
+   font-weight: bold;
 }
 
 
@@ -1968,13 +1969,14 @@ padding:5px 0 25px 17px;
     left: 0 !important;
     position: fixed !important;
     top: 25% !important;
-  background: url(../images/feedback.png) no-repeat scroll 0px 0px !important;
+  background: url(../images/feedback_hover.png) no-repeat scroll 0px 0px !important;
   width:39px;
   height:118px;
   cursor: pointer;
 }
 #block-feedback-form h2:hover{
- background: url(../images/feedback_hover.png) no-repeat scroll 0px 0px !important;
+ 
+  background: url(../images/feedback.png) no-repeat scroll 0px 0px !important;
 }
 
 #block-feedback-form .content{
@@ -2087,6 +2089,7 @@ padding:5px 0 25px 17px;
 }
 .page-search-result .summary_selected_photos, .page-search-result .summary_cost {
   padding-left:10px;
+  font-weight: bold;
 }
 #block-feedback-form .feedback-help {
   float:left;
@@ -2110,7 +2113,7 @@ padding:5px 0 25px 17px;
     margin-top: 20px;
     overflow-x: hidden;
     overflow-y: scroll;
-    width: 563px;
+    width: 550px;
     border: 1px solid #CCCCCC;
 }
 .page-search-result .region-content .view-content table{
@@ -2189,4 +2192,36 @@ div#block-feedback-form a.feedback-link-new{
     position: absolute;
     top: 5px;
 	opacity: 0;
+}
+/* 06:03:12 */
+@font-face {
+	font-family: 'Conv_HelveticaBold';
+	src: url('fonts/HelveticaBold.eot');
+	src: local('☺'), url('fonts/HelveticaBold.woff') format('woff'), url('fonts/HelveticaBold.ttf') format('truetype'), url('fonts/HelveticaBold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+.page-search-result .left-corner {
+   min-height: 896px;
+   border-bottom: 10px solid #E8E8E8;
+
+}
+
+/*Design for check box in search results page*/
+.page-search-result label { display: block; cursor: pointer; line-height: 20px; padding-bottom: 26px; text-shadow: 0 -1px 0 rgba(0,0,0,.2); }
+
+.page-search-result .label_check    { background: url(../images/checkbox.png) no-repeat; }
+.page-search-result label.c_on      { background: url(../images/checkbox-hover.png) no-repeat; }
+
+.page-search-result .label_check input,
+.page-search-result .label_radio input  { position: absolute; left: -9999px; }
+
+/*End Design for check box in search results page*/
+
+div.form-item-url-hidden ,
+.page-search-result .left-corner #tabs-wrapper h1{
+display:none; 
+}
+#overlay-content #block-feedback-form .feedback-message {
+	height: 100%;
 }
