--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -84,8 +84,8 @@ margin:0;
 .login-btn {
 	
 	height:28px;
-	padding-top:30px;
-        margin-top:10px;
+	padding-top:28px;
+  margin-top:10px;
 }
 .login-btn-lft {
 	background:url(../images/login-btn-lft.png) no-repeat;
@@ -323,7 +323,7 @@ min-height:333px;
 	margin-left:25px;
 }
 .cont-lft {
-	width:471px;
+	width:471px; border:1px solid #dedede\9;
 	/*height:262px;*/
 	background:url(../images/cont-inner-bg.png) repeat;
 	border-top:1px solid #dedede;
@@ -337,7 +337,7 @@ min-height:333px;
         position: relative;
 }
 .cont-rig {
-	width:471px;
+	width:471px; border:1px solid #dedede\9;
 	/*height:262px;*/
 	background:url(../images/cont-inner-bg.png) repeat;
 	border-top:1px solid #dedede;
@@ -637,7 +637,7 @@ width:490px;
     color: #1A253C;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 13px;
-    height: 40px;-webkit-box-shadow: none !important; 
+    height: 40px; line-height:40px;-webkit-box-shadow: none !important; 
 	-moz-box-shadow: none !important; 
 	box-shadow: none !important;
     padding: 2px;
@@ -696,6 +696,7 @@ width:149px;
     position: relative;
     top: 4px;
 width:10px;
+border:none\9; outline:none\9;
 }
 #user-register-form .field-widget-options-onoff .description{
  float: right;
@@ -794,7 +795,7 @@ background:#f5f5f5;
 border:1px solid #bfbfbf;
 border-radius:5px;
 position:relative;
-left:150px;
+left:135px;
 color: #34373A;
 cursor:pointer;
 font-family:helvetica,san-serif;
@@ -869,7 +870,7 @@ margin-left:8px;
 
 
 
-
+#runner_number	{ line-height:34px;}
 #runner_number, #number_recent_event1, #number_recent_event2{
 	border: 1px solid #DEE4E7;
     border-radius: 5px 5px 5px 5px;
@@ -885,9 +886,14 @@ margin-left:8px;
     width: 167px;
 margin-left:8px;
 }
+#runner_number {
+	  margin-left: 0px!important;
+	  width:176px;
+	}
 #number_recent_event1, #number_recent_event2
 {
    width:160px!important;
+   line-height:25px;
    height:25px!important;
 }
    /*background: none repeat scroll 0 0 #F5F5F5;
@@ -898,8 +904,8 @@ border: 1px solid #BFBFBF;
 	background: url("../images/search.png") no-repeat scroll 0 0 !important;
     border:0 none!important;
     cursor: pointer!important;
-    height:37px!important;
-    width: 109px!important;
+    height:40px!important;
+    width: 117px!important;
 }
 #edit-search:hover
 {
@@ -988,14 +994,14 @@ padding-top:0px!important;
 }
 ul.main-menu {
   float:left!important;
-  top:30px;
+  top:28px;
   left:5px;
   color:#90B5D1!important;
   z-index:10;
 }
 ul.links li, ul.inline li {
   border-left:1px solid #ccc!important;
-  padding:5px 12px 5px 12px!important;
+  padding:3px 12px 3px 12px!important;
   margin-bottom:8px!important;
   text-transform:uppercase;
 }
@@ -1011,7 +1017,7 @@ ul.main-menu li a:hover{
 }
 
 ul.main-menu li a, ul.main-menu li a:link, ul.main-menu li a:visited {
-  padding:4px 12px!important;
+  padding:3px 12px!important;
   margin-top:6px;
 }
 #sidebar-first.sidebar {
@@ -1291,7 +1297,7 @@ padding:0;
 .page-login #user-register-form #paypal_icon {
   position:relative;
   right:9px;
-top:54px;
+top:43px;
 
 float:right;
 }
@@ -1301,6 +1307,7 @@ float:right;
 .page-login #edit-field-term .description {
   display:block!important;
 }
+
 .page-login #register-fieldset #edit-actions #edit-submit {
     background: none repeat scroll 0 0 #F5F5F5;
     border: 1px solid #BFBFBF;
@@ -1572,7 +1579,7 @@ text-align:center;
     color: #1A253C;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 13px;
-    height: 40px;
+    height: 40px; line-height:40px;
     margin-left: 8px;
     padding: 2px;
     text-indent: 7px;
@@ -1696,8 +1703,7 @@ text-align:center;
 .page-search-result  #sidebar-second .block .content{
 float:right;
  width: 437px;
- position: relative;
- top: 16px;
+
 }
 .block .content
 {
@@ -1776,7 +1782,7 @@ float: left;
 .page-search-result #sidebar-second
 {
 float: right;
-margin-top: 235px;
+margin-top: 222px;
 }
 .page-search-result #sidebar-second .region-sidebar-second
 {
@@ -1840,7 +1846,8 @@ text-align:justify;
 .page-search-result #photo_cost
 {
    float:left;
-   padding:0 0 10px 100px;
+   padding:0 0 0px 100px;
+   height:20px;
 }
 .page-search-result #photo_cost .photo_cost
 {
@@ -1853,7 +1860,8 @@ text-align:justify;
 {
    float:right;
    margin-right:30px;
-   padding:0 0 10px 0;
+   padding:0 0 0px 0;
+   height:20px;
 }
 .page-search-result #photo_author .photo_cost
 {
@@ -1892,7 +1900,7 @@ text-align:justify;
     width: 400px;
 	height:330px;
 	vertical-align:middle;
-	padding-top:20px;
+	padding-top:5px;
 }
 
 
@@ -2011,7 +2019,7 @@ padding:5px 0 25px 17px;
     padding: 11px 15px 11px 5px;
     text-align: right;
     text-decoration: none;
-    position: relative;
+    
     margin: 2px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -2055,6 +2063,7 @@ padding:5px 0 25px 17px;
     opacity: 0;
     text-align: right;
     width: 36px;
+    padding:12px;
 }
 
 /* 28:02:12 */
@@ -2110,7 +2119,7 @@ padding:5px 0 25px 17px;
 /*-----01-03-12-----*/
 
 .page-search-result .region-content .view-content{
-    height: 532px;
+    height: 451px;
     margin-top: 20px;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -2188,11 +2197,13 @@ body.page-feedback  #overlay #overlay-content
     background:none;
 }
 div#block-feedback-form a.feedback-link-new{
-	left: 0;
+    left: 0;
     padding: 40px 8px;
     position: absolute;
-    top: 5px;
-	opacity: 0;
+    /*top: 5px;*/
+    opacity: 0;
+    width:23px;
+    height:38px;
 }
 /* 06:03:12 */
 @font-face {
@@ -2203,7 +2214,7 @@ div#block-feedback-form a.feedback-link-new{
 	font-style: normal;
 }
 .page-search-result .left-corner {
-   min-height: 920px;
+   min-height: 836px;
    border-bottom: 10px solid #E8E8E8;
 
 }
@@ -2235,6 +2246,6 @@ box-shadow: none;
 span#photo_cost,span#photo_author{
 font-weight:bold;
 }
-
+#user-register-form div.form-item-field-paypal-id-und-0-value {margin-top:0;}
 
 
