--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -84,18 +84,18 @@ margin:0;
 .login-btn {
 	
 	height:28px;
-	padding-top:28px;
-  margin-top:10px;
+	padding-top:30px;
+        margin-top:10px;
 }
 .login-btn-lft {
 	background:url(../images/login-btn-lft.png) no-repeat;
 	width:12px;
-	height:29px;form-item-runner-number
+	height:29px;
 }
 .login-btn-mid {
 	background:url(../images/login-btn-mid.png) repeat-x;
 	height:29px;
-	padding-right:6px;
+        padding-right: 6px;
 }
 
 .login-btn-mid img{
@@ -142,7 +142,7 @@ it
 .twitter-logo {
 	background:url(../images/twitter-login.png) no-repeat;
 	width:25px;
-	height:25px;#tabs-wrapper
+	height:25px;
 	margin-left:10px;
 }
 .twitter-logo:hover {
@@ -253,9 +253,9 @@ float:left;
 	background:url(../images/search.png) no-repeat;
 	width:109px;
 	height:37px;
-	margin-left:17px;.cart 
+	margin-left:17px;
 	border:none;
-	cursor:pointer;new_account_heading
+	cursor:pointer;
 }
 .text-box input.search:hover
 {
@@ -334,7 +334,7 @@ min-height:333px;
 	-o-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	margin-top:10px;
 	margin-bottom:10px;
-        min-height: 250px;
+        min-height: 245px;
         position: relative;
 }
 .cont-rig {
@@ -350,7 +350,7 @@ min-height:333px;
 	margin-top:10px;
 	margin-bottom:10px;
         position: relative;
-        min-height: 250px;
+        min-height: 245px;
 }
 .cont-lft-header {
 	color:#444;
@@ -363,7 +363,7 @@ min-height:333px;
 }
 .find-palyers {
 	margin-left:10px;
-	margin-top:20px;
+	margin-top:9px;
 }
 .find-palyers ul {
 	list-style:none;
@@ -421,7 +421,7 @@ min-height:333px;
 .social-icon img
 {
 	margin-top:25px;
-	margin-right:20px;ster
+	margin-right:20px;
 }
 .footer-inner p
 {
@@ -441,7 +441,7 @@ min-height:333px;
     * ultramarathon
 
 Trade
-pictures you have taken...
+pictures you have taken
 Select Event
 
     * Select Event
@@ -464,7 +464,7 @@ image 	image 	image 	image 	imageSelect Event
     * ultramarathon
 
 Trade
-pictures you have taken...
+pictures you have taken
 Select Event
 
     * Select Event
@@ -486,11 +486,11 @@ image 	image 	image
 }
 
 .form-item-runner-number{
-float:left;.cart 
+float:left; 
 }
 #edit-search{
 float:left;
-margin-top:12px;
+margin-top:13px;
 margin-left:10px;
 }
 #tabs-wrapper{
@@ -726,7 +726,7 @@ display:none !important;
 }
 .one-sidebar #center .content{
 border:none !important;
-width:430px !important;
+width:416px !important;
 float:left;
 -webkit-box-shadow: none !important; 
 	-moz-box-shadow: none !important; 
@@ -790,35 +790,46 @@ height:auto !important;
 float:none !important;
 }
 .page-login #edit-actions--2 #edit-submit--2{
--moz-border-radius: 5px 5px 5px 5px;
 width:170px;
-background:#f5f5f5;
-border:1px solid #bfbfbf;
-border-radius:5px;
 position:relative;
 left:135px;
 color: #34373A;
 cursor:pointer;
-font-family:helvetica,san-serif;
+background: url("../images/create-account.png") no-repeat scroll 0 0;
+border:none;
+text-indent:999px;
+/*font-family:helvetica,san-serif;
 font-size:14px;
 font-weight:bold;
+background:#f5f5f5;
+border:1px solid #bfbfbf;
+border-radius:5px;
+-moz-border-radius: 5px 5px 5px 5px;*/
 }
+.page-login #edit-actions--2 #edit-submit--2:hover{
+	background: url("../images/create-account-hover.png") no-repeat scroll 0 0;
+	}
 
 .page-login #edit-actions #edit-submit,.page-user #edit-actions #edit-submit{
-width:100px;
-background:#f5f5f5;
+width:89px;
+height:37px;
+cursor:pointer;
+background: url("../images/login.png") no-repeat scroll 0 0;
+border:none;
+position:relative;
+left:137px;
+text-indent:99px;
+/*background:#f5f5f5;
 color: #34373A;
 border:1px solid #bfbfbf;
 border-radius:5px;
 -webkit-border-radius:5px;
 -moz-border-radius:5px;
 -o-border-radius:5px;
-position:relative;
-left:137px;
-cursor:pointer;
-font-family:helvetica,san-serif;
-font-size:14px;
-font-weight:bold;
+*/
+}
+.page-login #edit-actions #edit-submit:hover,.page-user #edit-actions #edit-submit:hover{
+	background: url("../images/login-hover.png") no-repeat scroll 0 0;
 }
 .captcha img{
 float:right;
@@ -884,7 +895,7 @@ margin-left:8px;
 	box-shadow: none !important;
     padding: 2px;
     text-indent: 7px;
-    width: 184px;
+    width: 167px;
 margin-left:8px;
 }
 #runner_number {
@@ -1275,7 +1286,7 @@ margin-top:0;
 margin-top:60px;
 }
 .page-login #user-register-form #edit-actions--2{
-float:left;.captcha
+float:left;
 }
 .page-login #user-login{
 border:1px solid #D2D2D2;
@@ -1544,6 +1555,14 @@ div.messages {
 .login-btn-mid span {
    margin-top:1px!important;
 }
+
+.login-btn-mid a {
+  text-decoration: none;
+}
+.login-btn-mid a:hover {
+  text-decoration: underline!important;
+}
+
  a#guide{
   text-decoration:underline!important;
 }
@@ -1663,15 +1682,13 @@ text-align:center;
 }
 .page-runner .content #recent-event1-image .form-submit
 {
-  	margin-top:0px;
+  	margin-top:3px;
 	cursor:pointer;
     background: url("../images/find-btn.png") no-repeat scroll 0 0 transparent;
     border: 0 none;
     cursor: pointer;
-    height: 31px;
+    height: 25px;
     width: 88px;
-    position:relative;
-    top:-1px;
 }
 .page-runner .content #recent-event1-image .form-submit:hover, .page-runner .content #recent-event2-image .form-submit:hover {
     background: url("../images/find-btn-hover.png") no-repeat scroll 0 0 transparent;
@@ -1689,12 +1706,12 @@ text-align:center;
 }
 .page-runner .content #recent-event2-image .form-submit
 {
- 	 margin-top:12px;
+ 	 margin-top:15px;
 	cursor:pointer;
     background: url("../images/find-btn.png") no-repeat scroll 0 0 transparent;
     border: 0 none;
     cursor: pointer;
-    height: 31px;
+    height: 25px;
     width: 88px;
 }
 
@@ -1707,7 +1724,8 @@ text-align:center;
 .page-search-result  #sidebar-second .block .content{
 float:right;
  width: 437px;
-
+ position: relative;
+ top: 16px;
 }
 .block .content
 {
@@ -1786,7 +1804,7 @@ float: left;
 .page-search-result #sidebar-second
 {
 float: right;
-margin-top: 222px;
+margin-top: 235px;
 }
 .page-search-result #sidebar-second .region-sidebar-second
 {
@@ -1829,7 +1847,7 @@ position:relative;
 }
 .page-search-result .region-content .content table tr td .views-field-nid .field-content .node_check{
 float: right;
-    margin-top: -135px;
+    margin-top: -127px;
     position: relative;
     right: 0;
     top: 0;
@@ -1863,7 +1881,7 @@ text-align:justify;
 .page-search-result #photo_author
 {
    float:right;
-   margin-right:30px;
+   margin-right:18px;
    padding:0 0 0px 0;
    height:20px;
 }
@@ -1881,9 +1899,7 @@ text-align:justify;
 }
 .page-search-result #search-result-cart #add_to_cart
 {
-   background: url("../images/Add-Cart.png") no-repeat scroll 0 0 transparent !important;
-   width:139px;
-   height:37px;
+    height:37px;
    color:#34373a;
    font-size:14px;
    padding-left:38px;
@@ -1894,7 +1910,16 @@ text-align:justify;
    font-family:'Conv_HelveticaBold',Sans-Serif;
    font-weight: bold;
 }
-
+.page-search-result #search-result-cart .add_cart{
+ background: url("../images/Add-Cart.png") no-repeat scroll 0 0 transparent !important;
+  margin:45px 0 20px 263px;
+   width:139px;
+}
+.page-search-result #search-result-cart .remove_cart{
+ background: url("../images/remove-from-cart.png") no-repeat scroll 0 0 transparent !important;
+   margin:45px 0 20px 215px;
+    width:183px;
+}
 
 .region-sidebar-second .content #prev_img
 {
@@ -1902,7 +1927,7 @@ text-align:justify;
     float: left;
     text-align: right;
     width: 400px;
-	height:330px;
+	height:365px;
 	vertical-align:middle;
 	padding-top:5px;
 }
@@ -1915,7 +1940,7 @@ text-align:justify;
 .page-search-result .content #search-result-cart #add_to_cart
 {
     float:left;
-    margin:45px 0 20px 263px;
+    
 }
 .page-search-result .content #search-result-cart .cart_summary
 {
@@ -1938,7 +1963,7 @@ text-align:justify;
     margin-right: 35px;
     margin-top: 10px;
 }
-.page-search-result .content #search-result-cart .proceed_to_cart
+.page-search-result .content #search-result-cart .proceed_to_cart a
 {
    background: transparent url(../images/Cart-Summary.png) no-repeat scroll 0px 0px !important;
 cursor: pointer;
@@ -1957,7 +1982,9 @@ padding:5px 0 25px 17px;
 .page-search-result .region-content .views-field-uc-product-image
 {
    text-align:center;
-   height:127px;
+  height:100px;
+  position: relative;
+  top:-18px;
 }
 .page-search-result .right-corner
 {
@@ -2023,7 +2050,7 @@ padding:5px 0 25px 17px;
     padding: 11px 15px 11px 5px;
     text-align: right;
     text-decoration: none;
-    
+   /* position: relative; */
     margin: 2px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -2031,6 +2058,10 @@ padding:5px 0 25px 17px;
     -moz-border-top-right-radius: 5px;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
+    
+    width : 406px;
+    height : 21px;
+    
     }
 
 #block-feedback-form #fb_close a:hover
@@ -2123,7 +2154,7 @@ padding:5px 0 25px 17px;
 /*-----01-03-12-----*/
 
 .page-search-result .region-content .view-content{
-    height: 451px;
+    height: 453px;
     margin-top: 20px;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -2138,7 +2169,7 @@ padding:5px 0 25px 17px;
 }
 .page-runner .region-recent-event1-images .view-content, .page-runner .region-recent-event2-images .view-content
 {
-  margin-left: 9px;
+  margin-left: 4px;
   float: left;
   width: 431px;
   height:176px;
@@ -2158,7 +2189,7 @@ padding:5px 0 25px 17px;
 }
 #feedback-form #fb_close_link {
   background: url(../images/close.png) no-repeat left center;
-  padding: 11px;
+  padding: 12px;
 }
 #feedback-form #edit-field-email-und-0-value {
   border:1px solid #DEE4E7;
@@ -2168,7 +2199,7 @@ padding:5px 0 25px 17px;
     color: #1A253C;
     padding:2px;
     width: 275px;
-    height: 27px;
+    height: 32px;
 }
 #feedback-form .form-textarea-wrapper textarea {
   border: 1px solid #ccc!important;
@@ -2218,7 +2249,7 @@ div#block-feedback-form a.feedback-link-new{
 	font-style: normal;
 }
 .page-search-result .left-corner {
-   min-height: 836px;
+   min-height: 920px;
    border-bottom: 10px solid #E8E8E8;
 
 }
@@ -2275,3 +2306,384 @@ ul#edit-file_filelist{
     top: -41px;
     width: 112px;
 }
+/* new by resource */
+/* 09.03.2012 */
+.cart-block-icon-empty {
+  background: url("../images/cart-empty.png") no-repeat scroll left center transparent;
+}
+
+/* 13.03.2012 */
+.page-search-result #node_cost,.page-cart #node_cost {
+  background: url("../images/price-bg.png") no-repeat scroll left center transparent;
+  color:#fff;
+  font-size: 12px;
+  width: 44px;
+  height: 45px;
+  line-height: 44px;
+  text-align: center;
+}
+.views-field-sell-price {
+  height:45px; 
+  width:44px; 
+  position:relative; 
+  top:4px; 
+  z-index:1; 
+}
+
+
+.page-cart #uc-cart-view-form .content {
+    border-radius: none!important;
+    box-shadow: none!important;
+    margin-bottom:0px!important;
+    margin-top: 0px!important;
+    min-height: 0px!important;
+    padding-bottom: 0px!important;
+    width: none!important;
+}
+
+/* 14.03.2012 */
+.page-search-result .region-content {
+   float: left ;
+   width: 557px;
+}
+.page-search-result #sidebar-second {
+  float:none !important;
+}
+
+.page-search-result #sidebar-second .contextual-links-region
+{
+ float: none !important;
+/*width: 435px;*/
+}
+
+#block-uc-cart-cart .content {
+  border-radius: none !important;
+  box-shadow:  none !important;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  min-height: 0px !important;
+  padding-bottom: 0px !important;
+  width: none!important;
+}
+
+
+.cart-block-summary-links td {
+  display : none;
+}
+
+.cart-block-title-bar {
+  color: #333;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 15px;
+font-weight: bold;
+}
+table.cart-block-summary tbody tr td  {
+  color: #F60;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 11px;
+margin-top: 2px;
+border: none !important;
+}
+.cart-block-icon-empty {
+background: url("../images/cart-empty.png") no-repeat scroll left center transparent !important;
+}
+.cart-block-icon-full {
+background: url("../images/cart-full.png") no-repeat scroll left center transparent !important;
+}
+.cart-block-icon-full, .cart-block-icon-empty {
+  float: left;
+  height: 18px !important;
+  margin: 2px 6px 0px 0px;
+  width: 29px !important;
+}
+
+.page-cart .region-content {
+  float: left;
+  width: 480px;
+  padding: 15px 0 0 0;
+}
+
+.page-cart #sidebar-second {
+  float: right;
+  width: 480px;
+  padding: 15px 0 0 0;
+}
+.page-cart #prev_img_cart {
+  text-align: right;
+  width: 464px;
+}
+.page-cart #cart-result{
+  border-radius: 6px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border: 1px solid #E8E8E8;
+  margin-left: 62px;
+  width: 401px;
+  padding: 5px 0 0 0;
+}
+.page-cart #cart_result_subtotal {
+  width: 180px;
+  float: left;
+  padding: 9px 0 0 4px;
+  
+}
+.page-cart #proceed_checkout {
+background: url("../images/Cart-Summary.png") no-repeat scroll 0 0 transparent !important;
+width: 210px;
+height: 45px;
+border: none;
+}
+.page-cart #cart_result_subtotal .total_cost {
+  color: #00a14e;
+}
+.page-cart #uc-cart-view-form table {
+  padding: 0 0 10px 0;
+  margin: 0px;
+  overflow-x: hidden;
+    overflow-y: scroll;
+}
+.page-cart #cart_result_title {
+  padding: 5px 5px;
+  text-align: center;
+  border-bottom:1px solid #ccc;
+  
+}
+.page-cart #uc-cart-view-form {
+  border: 1px solid #ccc;
+  width: 540px;
+}
+.page-cart #uc-cart-view-form .cart_table {
+  height: 393px;
+  overflow: auto;
+ }
+.page-cart #uc-cart-view-form .cart_table table {
+    border-collapse: separate;
+}
+.page-cart .label_check {
+   cursor: pointer;
+    display: block;
+    line-height: 20px;
+    padding-bottom: 0px!important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+    width: 23px;
+    height: 23px;
+    position: relative;
+    top: 16px;
+    left: 118px;
+}
+.page-cart .node_cost {
+    position: relative;
+    top: 46px;
+    left: 0px;
+    width: 50px;
+    height: 50px;
+    top : 14px;
+    z-index: 1;
+
+  
+}
+
+
+.front .region-recent-event1-images img,.front .region-recent-event2-images img{
+  border-bottom: 1px solid #e0e0e0;
+  border-right : 1px solid #e0e0e0;
+  padding-bottom:2px;
+  padding-right: 2px;
+}
+
+.page-cart .cart_table table tbody tr td {
+  width: 145px;
+  height:158px;
+}
+
+.page-cart .cart_table label {
+  display: block;
+  cursor: pointer;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
+  position: relative;
+  z-index: 1;
+  left: 130px;
+  width: 23px;
+  height: 23px;
+  top: -16px;
+
+}
+.page-cart #uc-cart-view-form img {
+float:none!important;
+position: relative;
+left: 14px;
+top: -29px;
+text-align: center;
+}
+.page-cart .cart_img{
+  width: 145px;
+  float: left;
+  text-align: center;
+  height: 80px;
+  
+}
+
+.errorPage {
+  min-height: 350px;
+  padding : 35px 0 0 35px;
+}
+
+.page-cart .content {
+  box-shadow: none !important;
+}
+
+/* checkout */
+.cartPane{
+ border: 1px solid #CCCCCC;
+ float: left;
+ overflow-x: hidden;
+ overflow-y: scroll;
+ width: 475px;
+}
+.blueHeading {
+color:#4AB0F8;
+font-family:'Walkway Bold',sans-serif;
+font-size:36px;
+font-weight:normal;
+
+letter-spacing:2px;
+
+margin-top:15px;
+padding:10px;
+}
+.boldText{
+font-weight:bold;
+padding:10px;
+float:left;
+}
+.totalPrice{
+font-weight:bold;
+width: 127px;
+padding-left: 10px;
+}
+.currencyText{
+color: #00A14E;
+padding:0px;
+float: right;
+}
+
+
+.paymentPane {
+  border : 1px solid #CCCCCC;
+  float: left;
+  margin-right: 25px;
+  width: 465px;
+  padding: 23px 5px 0 5px;
+
+}
+.page-cart-checkout .checkoutPane {
+   width: 980px;
+}
+.paymentPane tbody {
+   border: none;
+}
+/* for hide subtotal and order total in checkout page */
+#line-items-div td, th{
+  display:none;
+}
+.checkout_title {
+  color: #94BB1F;
+  font-family: 'Walkway Bold',sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  letter-spacing: 2px;
+  margin-top: 15px;
+  padding: 10px;
+}
+.uc-cart-checkout-form .form-item {
+  height: 55px;
+  line-height: 39px;
+}
+.uc-cart-checkout-form .form-item label {
+  float: left;
+  width: 122px;
+  padding: 0 15px 0 0;
+  text-align: right;
+}
+.uc-cart-checkout-form .form-item input {
+  padding: 10px 0 10px 0;
+}
+.uc-cart-checkout-form .form-item span {
+  line-height: 20px;
+}
+.uc-cart-checkout-form .form-item .uc-credit-cvv-help {
+  position: relative;
+  padding-top:5px;
+  padding-left: 136px;
+  /*top:-31px;
+  left: 202px;
+  */
+}
+.uc-cart-checkout-form .form-submit {
+  float: right;
+  margin: 0 18px 10px 0;
+  background: url("../images/submit.png") no-repeat scroll 0 0 transparent;
+  width: 109px;
+  height: 37px;
+  border: none;
+  cursor: pointer;
+}
+.uc-cart-checkout-form .form-submit:hover {
+  background: url("../images/submit-hover.png") no-repeat scroll 0 0 transparent;
+}
+.cart_msg {
+  background-color: #F8FFF0;
+  border: 1px solid #BBEE77;
+  color: green;
+  display: block;
+  /*background-image: url("../../misc/message-24-ok.png");*/
+  padding: 7px;
+}
+
+.checkoutPane fieldset {
+  border: 1px solid #CCCCCC;
+}
+
+.cartPane table td {
+  text-align: center;
+  padding:10px 0 10px 0;
+}
+.cartPane table td img {
+  border: 1px solid #e9e9e9;
+  padding: 2px;
+}
+
+.page-search-result .view-content table td img {
+  border: 1px solid #e9e9e9;
+  padding: 2px;
+}
+
+/*
+.form-item-panes-payment-details-cc-start-year label, 
+.form-item-panes-payment-details-cc-exp-year label,
+.form-item-cc-data-cc-start-year label, .form-item-cc-data-cc-exp-year label {
+  display : block !important;
+}
+
+.paymentPane #payment-pane #line-items-div {
+  border : none !important;
+}
+
+.paymentPane #payment-details {
+  border-top : none !important;
+}
+*/
+.page-cart-checkout .paymentPane .chzn-single{
+  width:265px !important;
+  }
+.page-cart-checkout .paymentPane .chzn-single-with-drop {
+  width:265px !important;
+}
+.page-cart-checkout #edit-panes-billing-billing-country_chzn{
+  width:275px !important;
+  float:left;
+ }
+ .page-cart-checkout .chzn-drop{
+   width:253px !important;
+   
+ }
